--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "rewrites": [
-      { "source": "/verify_Email/:param*", "destination": "/verify_Email/:token" },
-      { "source": "/client", "destination": "/client" }
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
