--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,6 @@ sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.tests=__tests__
+sonar.test.inclusions=__tests__/**/*.test.jsx
