--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,3 +15,5 @@ sonar.sources=.
 
 sonar.tests=__tests__
 sonar.test.inclusions=__tests__/**/*.test.jsx
+
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
