--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.tests=__tests__
-sonar.test.inclusions=__tests__/**/*.test.jsx
+sonar.tests=__test__
+sonar.test.inclusions=__test__/**/*.test.jsx
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
