Adding Sonarqube exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,6 +14,7 @@ sonar.sources=.
 #sonar.sourceEncoding=UTF-8
 
 sonar.tests=__test__
-sonar.test.inclusions=__test__/**/*.test.jsx
+sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/coverage/**,**/public/**,**/vite.config.js,**/*.config.js,**/tailwind.css
+sonar.test.inclusions=**/*.test.js,**/*.test.jsx,**/*.spec.js,**/*.spec.jsx
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
