--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "test": "jest --env=jsdom --coverage "
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.8",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "glob": "^11.0.0",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
@@ -23,8 +21,6 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
     "vercel": "^32.3.0",
     "victory": "^37.3.4"
   },
@@ -35,12 +31,11 @@
     "@eslint/js": "^9.13.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
+    "babel-preset-vite": "^1.1.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -51,6 +46,6 @@
     "postcss": "^8.4.49",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "vite": "^6.3.5"
   }
 }
